--- a/scss/global/_index.scss
+++ b/scss/global/_index.scss
@@ -1,5 +1,5 @@
-@forward 'colors';
-@forward 'boilerplate';
-@forward 'typography';
-@forward 'layout';
-@forward 'decoration';
+@forward "colors";
+@forward "boilerplate";
+@forward "typography";
+@forward "layout";
+@forward "decoration";
