--- a/scss/util/_mixins.scss
+++ b/scss/util/_mixins.scss
@@ -1,19 +1,25 @@
-@use 'functions' as f;
-@use 'sass:math';
-@use 'sass:map';
+@use "functions" as f;
+@use "sass:math";
+@use "sass:map";
 
 // Based on: https://chriskirknielsen.com/blog/modern-fluid-typography-with-clamp/
 @mixin fs-fluid($min-vw, $max-vw, $min-value, $max-value) {
   $factor: math.div(1, ($max-vw - $min-vw)) * ($max-value - $min-value);
-  $calc-value: unquote('#{ $min-value - ($min-vw * $factor) } + #{ 100vw * $factor }');
+  $calc-value: unquote(
+    "#{ $min-value - ($min-vw * $factor) } + #{ 100vw * $factor }"
+  );
 
   font-size: $min-value; // Fallback for older browsers
-  font-size: clamp(#{if($min-value > $max-value, $max-value, $min-value)}, #{$calc-value}, #{if($min-value > $max-value, $min-value, $max-value)});
+  font-size: clamp(
+    #{if($min-value > $max-value, $max-value, $min-value)},
+    #{$calc-value},
+    #{if($min-value > $max-value, $min-value, $max-value)}
+  );
 }
 
 $breakpoints: (
-  'medium': f.em(700),
-  'large': f.em(1200),
+  "medium": f.em(700),
+  "large": f.em(1200),
 );
 
 @mixin breakpoint($size) {
