--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -20,13 +20,17 @@
 
   :root {
     --fs-62: calc(62 / 16 * 1rem);
+    --fs-46: calc(46 / 16 * 1rem);
     --fs-40: calc(40 / 16 * 1rem);
     --fs-32: calc(32 / 16 * 1rem);
+    --fs-28: calc(28 / 16 * 1rem);
+    --fs-26: calc(26 / 16 * 1rem);
+    --fs-24: calc(24 / 16 * 1rem);
     --fs-18: calc(18 / 16 * 1rem);
 
-    --font-size-h1: var(--fs-62);
-    --font-size-h2: var(--fs-40);
-    --font-size-h3: var(--fs-32);
+    --font-size-h1: clamp(var(--fs-46), var(--fs-40) + 1.7391vw, var(--fs-62));
+    --font-size-h2: clamp(var(--fs-32), var(--fs-28) + 0.8696vw, var(--fs-40));
+    --font-size-h3: clamp(var(--fs-26), var(--fs-24) + 0.6522vw, var(--fs-32));
     --font-size-p: var(--fs-18);
 
     --font-dm-sans: "DM Sans", sans-serif;
@@ -50,7 +54,7 @@
   h1,
   .h1 {
     font-size: var(--font-size-h1);
-    line-height: calc(58 / 16 * 1rem);
+    line-height: 0.9355em;
     letter-spacing: -3px;
     max-width: 15ch;
     text-wrap: balance;
@@ -59,7 +63,7 @@
   h2,
   .h2 {
     font-size: var(--font-size-h2);
-    line-height: calc(36 / 16 * 1rem);
+    line-height: 0.9em;
     letter-spacing: -2px;
   }
 
@@ -70,7 +74,7 @@
   h3,
   .h3 {
     font-size: var(--font-size-h3);
-    line-height: calc(28 / 16 * 1rem);
+    line-height: 0.875em;
   }
 
   p {
