--- a/scss/global/_typography.scss
+++ b/scss/global/_typography.scss
@@ -56,7 +56,7 @@
     font-size: var(--font-size-h1);
     line-height: 0.9355em;
     letter-spacing: -3px;
-    max-width: 15ch;
+    max-inline-size: 15ch;
     text-wrap: balance;
   }
 
