--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -18,7 +18,7 @@
   }
 
   .wrapper {
-    width: min(100% - calc(20px / 16px * 1rem), var(--wrapper-size));
+    inline-size: min(100% - calc(20px / 16px * 1rem), var(--wrapper-size));
     margin-inline: auto;
   }
 
@@ -78,7 +78,7 @@
         aspect-ratio: 16 / 9;
         object-fit: cover;
         object-position: top;
-        max-width: 75%;
+        max-inline-size: 75%;
       }
     }
 
@@ -137,7 +137,7 @@
 
   @include u.breakpoint("medium") {
     .wrapper {
-      width: min(100% - var(--spacing-500), var(--wrapper-size));
+      inline-size: min(100% - var(--spacing-500), var(--wrapper-size));
     }
 
     .page-content {
@@ -161,7 +161,7 @@
       .content-schedule {
         text-align: center;
         > * {
-          max-width: 357px;
+          max-inline-size: 357px;
           margin-inline: auto;
         }
       }
@@ -178,7 +178,7 @@
 
         h2 {
           grid-column: 3;
-          max-width: 15ch;
+          max-inline-size: 15ch;
         }
       }
 
@@ -194,7 +194,7 @@
 
       .content-write-content {
         img {
-          max-width: min(400px, 100%);
+          max-inline-size: min(400px, 100%);
         }
       }
     }
@@ -224,7 +224,7 @@
         img {
           grid-column: 2 / -1;
           height: 100%;
-          max-width: 100%;
+          max-inline-size: 100%;
           object-fit: cover;
         }
       }
