--- a/scss/global/_layout.scss
+++ b/scss/global/_layout.scss
@@ -223,7 +223,7 @@
 
         img {
           grid-column: 2 / -1;
-          height: 100%;
+          block-size: 100%;
           max-inline-size: 100%;
           object-fit: cover;
         }
